--- a/XO/Base.lproj/Main.storyboard
+++ b/XO/Base.lproj/Main.storyboard
@@ -44,7 +44,7 @@
                         <sections>
                             <tableViewSection id="VI1-Az-dFS">
                                 <cells>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="RhY-xC-yvY">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="RhY-xC-yvY">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="RhY-xC-yvY" id="RGs-LL-ddz">
