--- a/XO/Base.lproj/Main.storyboard
+++ b/XO/Base.lproj/Main.storyboard
@@ -24,6 +24,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
                     <connections>
                         <segue destination="IiV-iC-XFx" kind="custom" identifier="sw_front" customClass="SWRevealViewControllerSegueSetController" id="wtT-Ix-0Ko"/>
                         <segue destination="eLK-NR-wzf" kind="custom" identifier="sw_rear" customClass="SWRevealViewControllerSegueSetController" id="MRB-VL-E1e"/>
@@ -180,6 +181,7 @@
                             <outlet property="delegate" destination="eLK-NR-wzf" id="vUO-al-aM9"/>
                         </connections>
                     </tableView>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
                     <connections>
                         <outlet property="dataProvider" destination="Sgg-YG-PJq" id="Yps-8q-e3s"/>
                     </connections>
@@ -253,7 +255,7 @@
                                     <constraint firstAttribute="height" constant="40" id="vw4-1f-pPr"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" red="0.35294117650000001" green="0.35294117650000001" blue="0.35294117650000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zTX-Xk-5Wq">
@@ -596,6 +598,6 @@
         <image name="play" width="25" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Xd1-rf-V7P"/>
+        <segue reference="wtT-Ix-0Ko"/>
     </inferredMetricsTieBreakers>
 </document>
